# Mini-Zephyr-Env

./: .gitignore  README.md
App/: CMakeLists.txt  esp32.overlay  prj.conf
App/include/: AccelThread.h  BTHome.h  DisplayThread.h  SensorThread.h
App/src/: AccelThread.c  BTHome.c  DisplayThread.c  SensorThread.c  ShellCallbacks.c  main.c
BLE-Central/: CMakeLists.txt  prj.conf
BLE-Central/src/: main.c
Hardware Files/ESP-ExtBoard/: ESP-ExtBoard.kicad_pcb  ESP-ExtBoard.kicad_prl  ESP-ExtBoard.kicad_sch
Hardware Files/ESP-ExtBoard/lib/: New_Library.kicad_sym
Hardware Files/ESP-ExtBoard/lib/CH340C/: CH340C.kicad_sym  SOIC127P600X180-16N.kicad_mod
Hardware Files/ESP-ExtBoard/lib/New_lib.pretty/: 128x64OLED.kicad_mod  AMPHENOL_10118194-0001LF.kicad_mod  MOLEX_502570-0893.kicad_mod  NEO-GPS.kicad_mod  PinHeader_1x04_P2.54mm_Vertical.kicad_mod  PinHeader_1x06_P2.54mm_Vertical_1.kicad_mod  PinHeader_1x08_P2.54mm_Vertical.kicad_mod  SOIC127P600X180-16N.kicad_mod
Hardware Files/ESP-ExtBoard/lib/SD-Card/: MOLEX_502570-0893.kicad_mod
Hardware Files/ESP-ExtBoard/lib/uUSB/: AMPHENOL_10118194-0001LF.kicad_mod
